responsiveness fixes+scrollbar

--- a/src/app/chat-bar/chat-bar.component.css
+++ b/src/app/chat-bar/chat-bar.component.css
@@ -1,3 +1,4 @@
 .input-group {
-	padding: 0;
+	padding-left: 1px;
+	padding-right: 1px;
 }
